syntax = "proto3";
package grpc;

option go_package = "https://github.com/DonCrastiv/INF-343/ProtoLiderJugadores";

/*PARTICIPAR DEL JUEGO*/
message Unirse {
}

message RespuestaUnirse {
    int32 etapa = 1;
}

/*ENVIAR JUGADAS*/
message Jugada {
    int32 jugada = 1;
}

message RespuestaJugada {
    bool eliminado = 1;
    int32 etapa = 2;
}

/*VER POZO*/
message VerPozo {
}

message RespuestaVerPozo {
    int32 montoAcumulado = 1;
}

service Jugador {
    rpc SolicitarUnirse (Unirse) returns (RespuestaUnirse);
    rpc EnviarJugada (Jugada) returns (RespuestaJugada);
    rpc SolicitarVerPozo (VerPozo) returns (RespuestaVerPozo);
}